--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^1.10.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.3",
     "@radix-icons/vue": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint": "^9.39.1",
     "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "radix-vue": "^1.9.17",
     "shadcn-nuxt": "^2.3.2",
     "tailwind-merge": "^3.4.0",
