made server/api for create link, made store for work with links

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.3",
     "@radix-icons/vue": "^1.0.0",
+    "@vueuse/core": "^14.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.39.1",
+    "nanoid": "^5.1.6",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
     "radix-vue": "^1.9.17",
