--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinia/nuxt": "^0.11.3",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^14.0.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.39.1",
