--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"lint:fix": "eslint . --fix",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@libsql/client": "^0.15.15",
@@ -39,9 +41,14 @@
 		"vue-router": "^4.6.3"
 	},
 	"devDependencies": {
+		"@nuxt/test-utils": "^3.20.1",
 		"@types/node": "^24.10.1",
+		"@vue/test-utils": "^2.4.6",
 		"drizzle-kit": "^0.31.7",
+		"happy-dom": "^20.0.10",
+		"playwright-core": "^1.57.0",
 		"tsx": "^4.20.6",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"vitest": "^3.2.4"
 	}
 }
